--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -56,6 +56,7 @@ body {
     .app-main-content-wrapper {
         background: #f1f1f1;
         min-height: 100%;
+        height: 100vh;
         overflow: scroll;
         padding: 1rem 1rem 1rem 1rem;
         // margin-top: 6rem;
