--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -14,6 +14,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
     height: 100%;
+    background: #f4f4f4;
 }
 
 .body-wrapper{
@@ -37,10 +38,11 @@ body {
     height: 100%;
     overflow: auto;
     margin-top: 4rem;
-
+    background: #f4f4f4;
     .app-navigation-wrapper {
         background: #fff;
         height: 100%;
+        height: 100vh;
         // padding-left: 1.25rem;
         // position: fixed;
         padding-top: 1rem;
@@ -54,11 +56,12 @@ body {
         }
     }
     .app-main-content-wrapper {
-        background: #f1f1f1;
+        
         min-height: 100%;
         height: 100vh;
         overflow: scroll;
         padding: 1rem 1rem 1rem 1rem;
+        
         // margin-top: 6rem;
      
     }
