--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -59,12 +59,20 @@ body {
         
         min-height: 100%;
         height: 100vh;
+        width: 100%;
         overflow: scroll;
         padding: 1rem 1rem 1rem 1rem;
         
         // margin-top: 6rem;
      
     }
+}
+
+//Bulma override
+.card {
+    padding: 1rem;
+    width: 100%;
+
 }
 
 
